Fix word wrapping bug in heatmap tooltips

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -117,7 +117,7 @@ input[type="radio"]:checked {
 }
 
 .cell-tooltip-wrapper {
-    position: absolute;
+    position: relative;
 }
 
 .cell-tooltip {
@@ -125,11 +125,13 @@ input[type="radio"]:checked {
     position: absolute;
     pointer-events: none;
     height: auto;
+    width: auto;
     box-sizing: border-box;
     opacity: 0;
     padding: 0.5rem;
     border-radius: 0.25rem;
     border: 1px solid gray;
+    white-space: nowrap;
 
     animation-name: cell-tooltip;
     animation-duration: 0.5s;
